--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,16 @@
     <li>
           <!-- 新規投稿ページへのリンクを追加した-->
           <%= link_to("新規投稿", "/posts/new") %>
-        </li>
+    </li>
+
+      <!-- ユーザー一覧ページへのリンク -->
+    <li>
+      <%= link_to("ユーザー一覧", "/users/index") %>
+    </li>
+    <!-- 新規ユーザー登録ページへのリンク -->
+    <li>
+      <%= link_to("新規登録", "/signup") %>
+    </li>
   </ul>
 </header>
 
