--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,17 @@
 <div class="main user-show">
   <div class="container">
     <div class="user">
+      <!-- 以下で、ユーザーの画像を出力していて、その画像のURLを指定している -->
+      <img src="<%= "/user_images/#{@user.image_name}" %>">
       <!-- 以下で、ユーザー名を出力している -->
       <h2><%= @user.name %></h2>
       <!-- 以下で、メールアドレスを出力している -->
       <p><%= @user.email %></p>
+      <!--編集しようとしているユーザーのidとログインしているユーザーのidが等しい場合のみ編集リンクを表示する-->
+      <% if @user.id == @current_user.id %>
         <!-- 以下で、ユーザー情報の編集ページへのリンクを設定している -->
       <%= link_to("編集", "/users/#{@user.id}/edit") %>
+      <% end %>
     </div>
   </div>
 </div>
