--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,22 @@
       <%= link_to("編集", "/users/#{@user.id}/edit") %>
       <% end %>
     </div>
+      <!--以下で、userモデルに定義したpostsメソッドを用いて、そのユーザーが投稿した投稿を全て取得している-->
+    <% @user.posts.each do |post| %>
+      <div class="posts-index-item">
+        <div class="post-left">
+          <!-- 以下で、ユーザーの画像を出力していて、その画像のURLを指定している -->
+          <img src="<%= "/user_images/#{post.user.image_name}" %>">
+        </div>
+        <div class="post-right">
+          <div class="post-user-name">
+            <!-- 以下で、ユーザー詳細ページへのリンクを設定している -->
+            <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+          </div>
+          <!-- 以下で、投稿の内容を出力している -->
+          <%= link_to(post.content, "/posts/#{post.id}") %>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
