--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,16 @@
       <%= link_to("編集", "/users/#{@user.id}/edit") %>
       <% end %>
     </div>
+
+    <ul class="user-tabs">
+      <li class="active"><%= link_to("投稿", "/users/#{@user.id}") %></li>
+      <li><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
+    </ul>
+
+
+
+
+
       <!--以下で、userモデルに定義したpostsメソッドを用いて、そのユーザーが投稿した投稿を全て取得している-->
     <% @user.posts.each do |post| %>
       <div class="posts-index-item">
