--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -11,6 +11,14 @@
               <%= message %>
             </div>
           <% end %>
+        <!--カテゴリーを選択するためのセレクトボックスを作成-->
+          <select name="category_id">
+            <option value="">カテゴリーを選択してください</option>
+            <!--カテゴリーの一覧を取得し、each文で回してoptionタグを作成している-->
+            <% @categories.each do |category| %>
+              <option value="<%= category.id %>"<%= "selected" if category.id == @post.category_id %>><%= category.name %></option>
+            <% end %>
+          </select>
         <!--投稿内容の初期値を元の内容にしている またname属性でparamsを使う準備をしている-->
           <textarea name="content"><%= @post.content %></textarea>
           <input type="submit" value="保存">
