--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,13 +8,27 @@
     <% @posts.each do |post| %>
       <div class="posts-index-item">
         <div class="post-left">
-          <!-- ユーザーの画像が表示されるように、以下のsrcに値を追加している -->
-          <img src="<%= "/user_images/#{post.user.image_name}" %>">
+            <!-- 匿名の場合は、匿名アイコンを表示する -->
+            <% if post.anonymous %>
+              <img src="/user_images/default_anonymous.png" alt="匿名アイコン" width="65" height="65">
+            <% else %>
+              <!-- ユーザーの画像が表示されるように、以下のsrcに値を追加している -->
+              <img src='<%= "/user_images/#{post.user.image_name}" %>'> 
+            <% end %>
         </div>
+        <!-- 投稿のユーザー名とカテゴリーと投稿内容を表示する -->
         <div class="post-right">
           <div class="post-user-name">
-            <!-- link_toメソッドを用いて、ユーザー詳細ページへのリンクを作っています。 -->
-            <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+            <!-- 匿名の場合は、匿名名を表示する -->
+            <% if post.anonymous %>
+              <p>匿名ユーザー</p>
+            <% else %>
+              <!-- link_toメソッドを用いて、ユーザー詳細ページへのリンクを作っています。 -->
+              <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+            <% end %>
+          </div>
+          <div class="post-category">
+            <%= post.category.name %>
           </div>
           <%= link_to(post.content, "/posts/#{post.id}") %>
         </div>
