--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -110,3 +110,16 @@
   font-size: 24px;
   opacity: 0.5;
 }
+
+
+/* 検索フォームのスタイル */
+.search-form {
+  margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.search-form div {
+  display: inline-block;
+}
