chabge portfolio name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,9 @@
     <div class="header-logo">
         <!--ログインしているときとしていないときでロゴのリンク先を変える-->
       <% if @current_user %>
-        <%= link_to("Bonds", "/posts/index") %>
+        <%= link_to("マイコン", "/posts/index") %>
       <% else %>
-        <%= link_to("Bonds", "/") %>
+        <%= link_to("マイコン", "/") %>
       <% end %>
     </div>
   <ul class="header-menus">
