impressed users list added

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,6 +39,8 @@
       <% end %>
       <!-- 共感の数を表示する -->
       <%= @likes_count %> 
+      <!-- 共感したユーザーのリストの表示を行う画面へのリンクを追加 -->
+      <%= link_to("共感したユーザー一覧", "/posts/#{@post.id}/likeusers") %>
 
 
       <!-- 編集ページへのリンクでログインしているユーザーと投稿者が同じ場合のみ表示する -->
