--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -123,3 +123,10 @@
 .search-form div {
   display: inline-block;
 }
+
+/* likeusersのスタイル */
+.like-users {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
