--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -23,12 +23,16 @@
           <% end %>
         </select>
 
-        <!-- 下２行で投稿フォームを作成 -->
-          <textarea name = "content"><%= @post.content %></textarea>
+          <!-- 下２行で投稿フォームを作成 -->
+            <textarea name = "content"><%= @post.content %></textarea>
+          <!-- タグを入力するフォームを作成 -->
+            <input type="text" name="tag_name" placeholder="タグを入力してください">
           <!-- 匿名投稿のチェックボックスを作成 -->
-          <input type="checkbox" name="is_anonymous" value="1">匿名投稿
-          <input type="submit" value="投稿">
+            <input type="checkbox" name="is_anonymous" value="1">匿名投稿
+            <input type="submit" value="投稿">
         </div>
+        
+        
       </div>
     
     <% end %>
