--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,8 @@
       <!-- タグを表示する -->
       <div class="post-tags">
         <% @tags.each do |tag| %>
-          <%= tag.name %>
+          <!-- link_toメソッドを用いて、タグの名前をクリックするとそのタグがついた投稿一覧ページに遷移するようにしている -->
+          <%=link_to(tag.name,"/tags/#{tag.name}") %>
       <% end %>
 
       <div class="post-time">      
@@ -55,6 +56,31 @@
           <%= link_to("削除", "/posts/#{@post.id}/destroy", method: :delete, data: { "turbo-method": :delete }) %>
         </div>
       <% end %>
+
+
+      <div class="post-comments">
+      <h3>コメント一覧</h3>
+      <% @post.comments.each do |comment| %>
+        <div class="comment">
+          <p><strong><%= comment.user.name %>:</strong> <%= comment.content %></p>
+          <% if comment.user_id == @current_user.id %>
+            <%= link_to "削除", destroy_comment_path(@post.id, comment.id), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger" %>
+          <% end %>
+        </div>
+      <% end %>
+      </div>
+
+      <div class="new-comment">
+        <%= form_with url: create_comment_path(@post.id), method: :post, local: true do |form| %>
+        <div class="form-group">
+          <%= form.label :content, "コメント" %>
+          <%= form.text_area :content, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= form.submit "投稿", class: "btn btn-primary" %>
+        </div>
+          <% end %>
+      </div>
     </div>
   </div>
 </div>
