suceed comment create

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -69,7 +69,7 @@
         </div>
       <% end %>
       </div>
-
+        <!-- コメント投稿フォーム -->
       <div class="new-comment">
         <%= form_with url: create_comment_path(@post.id), method: :post, local: true do |form| %>
         <div class="form-group">
