--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,10 +1,12 @@
 <!-- ヘッダーは共通の処理のためapplication.html.erbに移動 -->
 
 <div class="about-main">
-  <h2>bondsとは</h2>
+  <h2>マイコンとは</h2>
   <p>
-    相談SNSサービスです。
+    自殺を防止する相談SNSです。
     悩みを投稿し、他のユーザーに相談に乗ってもらうことができます。
+    また、他のユーザーの悩みに対してアドバイスをすることもできます。
+    相談を通じて、あなたの心の負担を少しでも軽くできればと思います。
   </p>
   <img class="about-img" src="/sample.jpg">
 </div>
