--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,7 +2,7 @@
 
 <div class="main top-main">
   <div class="top-message">
-    <h2>つぶやきで、世界はつながる</h2>
-    <p>今の気持ちをつぶやいてみよう！</p>
+    <h2>悩みを相談できる相手を見つけましょう</h2>
+    <p>あなたの経験が誰かの助けになります</p>
   </div>
 </div>
