--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
       <% else %>
     <!-- ログインしていない場合のリンク -->
           <li>
-            <a href="/about">bondsとは</a>
+            <a href="/about">マイコンとは</a>
           </li>
             <!-- 新規ユーザー登録ページへのリンク -->
           <li>
